--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -1,15 +1,37 @@
 ---
-title: null
+output: pdf_document
+header-includes:
+- \usepackage{booktabs}
+- \usepackage{longtable}
+- \usepackage{array}
+- \usepackage{multirow}
+- \usepackage{wrapfig}
+- \usepackage{float}
+- \usepackage{colortbl}
+- \usepackage{pdflscape}
+- \usepackage{tabu}
+- \usepackage{threeparttable}
+- \usepackage{threeparttablex}
+- \usepackage[normalem]{ulem}
+- \usepackage{makecell}
+- \usepackage{xcolor}
+- \AtBeginDocument{\let\maketitle\relax}
+- \usepackage{fancyhdr}
+- \pagestyle{fancy}
+- \fancyhf{}
+- \lhead{\textbf{Enteric Diseases Laboratory Branch Sars-CoV-2 Variant Whole Genome Sequencing Run Summary}}
+- \cfoot{\textbf{Ver. No.}01}
+- \lfoot{\textbf{Doc. No.} EDLB.TE.C.032.F02}
+- \rfoot{\textbf{Effective Date:}TBD}
 params:
   analysisDirFP: null
   runID: null
   seqDirFP: null
   sampleIDInsertFreq: 5
+
 ---
 
 ```{r index-comments, include=FALSE, eval=FALSE}
-# CSS styling helps to manage the layout of the page to compensate for the table. From: https://itqna.net/questions/48098/how-adjust-margins-r-markdown.
-
 # For rapid testing:
 rmarkdown::render(input = "Cecret/bin/report/clia_summary.Rmd", output_file = "clia_summary.pdf", output_format = "pdf_document", params = list(analysisDirFP = "../../../../testing", runID = "M3235-21-015", seqDirFP = "../../../../testing"))
 ```
@@ -17,13 +39,11 @@ rmarkdown::render(input = "Cecret/bin/report/clia_summary.Rmd", output_file = "c
 ```{r setup1, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-#library(formattable)
+library(formattable)
 library(knitr)
 library(kableExtra)
 library(rmarkdown)
 ```
-
-
 
 ```{r thresholds, include=FALSE}
 fastqcRawThreshold <- 100000          # min number of raw reads accepted in fastqc_raw column
@@ -51,36 +71,36 @@ sumTab <- read_tsv(file.path(params$analysisDirFP, "summary.txt"))
 # This does all of the formatting for the table read in above and displayed in the next code chunk. It contains a mix of dplyr, formattable, and kableExtra commands.
 sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID), "")) %>% 
           # remember to mod column names to match if columns included change
-          select(-aligner_version, -ivar_version, -fastp_reads_passed)# %>%
+          select(-aligner_version, -ivar_version, -fastp_reads_passed) #%>%
           # mutate(
-          #   pangolin_lineage = cell_spec(pangolin_lineage, 
-          #                                color = ifelse(pangolin_lineage == "None", "red", "black"), 
+          #   pangolin_lineage = cell_spec(pangolin_lineage,
+          #                                color = ifelse(pangolin_lineage == "None", "red", "black"),
           #                                bold = ifelse(pangolin_lineage == "None", T, F)),
-          #   pangolin_status = cell_spec(pangolin_status, 
-          #                               color = ifelse(pangolin_status == "passed_qc", "black", "red"), 
+          #   pangolin_status = cell_spec(pangolin_status,
+          #                               color = ifelse(pangolin_status == "passed_qc", "black", "red"),
           #                               bold = ifelse(pangolin_status == "passed_qc", F, T)),
-          #   fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1), 
+          #   fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1),
           #   fastqc_raw_reads_2 = color_bar(color = highGood(fastqc_raw_reads_2, fastqcRawThreshold))(fastqc_raw_reads_2),
-          #   seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning, 
-          #                               background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")), 
+          #   seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning,
+          #                               background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")),
           #                               bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
-          #   depth_after_trimming = cell_spec(depth_after_trimming, 
-          #                                    color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"), 
+          #   depth_after_trimming = cell_spec(depth_after_trimming,
+          #                                    color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"),
           #                                    bold = ifelse(depth_after_trimming >= depthAfterTrimThreshold, F, T)),
-          #   coverage_after_trimming = cell_spec(coverage_after_trimming, 
-          #                                       color = ifelse(coverage_after_trimming >= covAfterTrimThreshold, "black", "red"), 
+          #   coverage_after_trimming = cell_spec(coverage_after_trimming,
+          #                                       color = ifelse(coverage_after_trimming >= covAfterTrimThreshold, "black", "red"),
           #                                       bold = ifelse(coverage_after_trimming >= covAfterTrimThreshold, F, T)),
-          #   # `%_human_reads` = cell_spec(`%_human_reads`, 
-          #   #                                     color = ifelse(`%_human_reads` < perHumanThreshold, "black", "red"), 
+          #   # `%_human_reads` = cell_spec(`%_human_reads`,
+          #   #                                     color = ifelse(`%_human_reads` < perHumanThreshold, "black", "red"),
           #   #                                     bold = ifelse(`%_human_reads` < perHumanThreshold, F, T)),
-          #   `%_SARS-COV-2_reads` = cell_spec(`%_SARS-COV-2_reads`, 
-          #                                       color = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, "black", "red"), 
+          #   `%_SARS-COV-2_reads` = cell_spec(`%_SARS-COV-2_reads`,
+          #                                       color = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, "black", "red"),
           #                                       bold = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, F, T)),
-          #   `%_N` = cell_spec(`%_N`, 
-          #                     color = ifelse(`%_N` >= perNThreshold, "red", "black"), 
+          #   `%_N` = cell_spec(`%_N`,
+          #                     color = ifelse(`%_N` >= perNThreshold, "red", "black"),
           #                     bold = ifelse(`%_N` >= perNThreshold, T, F)),
-          #   vadr_status = cell_spec(vadr_status, 
-          #                            color = ifelse(vadr_status == "PASS", "black", "red"), 
+          #   vadr_status = cell_spec(vadr_status,
+          #                            color = ifelse(vadr_status == "PASS", "black", "red"),
           #                            bold = ifelse(vadr_status == "PASS", F, T)))
 
 # Make column names nicer
@@ -140,17 +160,23 @@ for (i in 1:colReps) {
 }
 ```
 
-```{r display-sum, echo=FALSE}
-sampleIDIndices <- str_starts(colnames(sumTab), "Sample.Name")
+```{r display-sum, echo=FALSE, results='asis'}
+sampleIDIndices <- which(str_starts(colnames(sumTab), "Sample.Name"))
 
-for (s in sampleIDIndices) {
-  if (s < tail(sampleIDIndices, n = 1)) {
-    y <- colnames(sumTab)[s:s + as.numeric(params$sampleIDInsertFreq) - 1]
+for (s in 1:length(sampleIDIndices)) {
+  if (sampleIDIndices[s] == head(sampleIDIndices, n = 1)) {
+    i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 2
+    y <- colnames(sumTab)[1:i]
   } else {
-    y <- colnames(sumTab)[s:length(colnames(sumTab))]
+    if (sampleIDIndices[s] < tail(sampleIDIndices, n = 1)) {
+      i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 1
+      y <- colnames(sumTab)[sampleIDIndices[s]:i]
+    }
   }
-  kable(x = select(sumTab, all_of(y)), 
-        align = "l", 
-        format = "latex")
+  print(kbl(select(sumTab, all_of(y)),
+            booktabs = T,
+            align = "l") %>%
+        kable_styling(latex_options = "striped"))
+#cat('\n\n<!-- -->\n\n')
 }
 ```
