Updated clia_summary.Rmd to fix column name agreement with summary.txt

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -110,37 +110,38 @@ colnames(sumTab) <- c("Sample.ID",
                       "Pangolin", 
                       "Pangolin.QC", 
                       "NextClade", 
-                      "Num.FastQC.R1", 
-                      "Num.FastQC.R2", 
-                      "Num.Seqyclean.Pairs", 
-                      "Percent.Seqyclean.Pairs", 
+                      "#FastQC.R1", 
+                      "#FastQC.R2", 
+                      "#Seqyclean.Pairs", 
+                      "%Seqyclean.Pairs", 
                       "Depth.Post.Trim", 
                       "Coverage.Post.Trim", 
-                      "Percent.Human.Reads", 
-                      "Percent.SC2.Reads", 
-                      "Num.iVar.Variants", 
-                      "Num.BCFTools.Variants", 
-                      "Num.BEDTools.Failed.Amps", 
-                      "Num.SAMTools.Failed.Amps", 
-                      "Num.N", 
-                      "Num.Degenerate", 
-                      "Num.ACTG", 
-                      "Num.Total.Bases", 
+                      "%Human.Reads", 
+                      "%SC2.Reads", 
+                      "#iVar.Variants", 
+                      "#BCFTools.Variants", 
+                      "#BEDTools.Failed.Amps", 
+                      "#SAMTools.Failed.Amps", 
+                      "#N", 
+                      "#Degenerate", 
+                      "#ACTG", 
+                      "#Total.Bases", 
                       "Total.Reads.Analyzed", 
-                      "Percent.N", 
+                      "%N", 
                       "Mean.Cov.Depth", 
-                      "Percent.Reads.Mapping.SC2", 
+                      "%Reads.Mapping.SC2", 
                       "Vadr", 
                       "Vadr.All.ORF.Shift",
                       "Vadr.S.ORF.Shift", 
+                      "AA.Changes.S",
                       "Length.Longest.Insert", 
                       "Length.Longest.Del",
                       "ORFs.Passing.QC",
                       "Coverage.S",
                       "Mean.Depth.S",
                       "Percent.Pos.Min.Cov.S",
-                      "Percent.Ns.S",
-                      "AA.Changes.S")
+                      "Percent.Ns.S"
+)
 
 # Insert SampleID column into table at every nth column (params$sampleIDInsertFreq) position
 # how many times to insert sampleID column
