--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -28,7 +28,7 @@ params:
   analysisDirFP: null
   runID: null
   seqDirFP: null
-  sampleIDInsertFreq: 5
+  sampleIDInsertFreq: 4
 
 ---
 
@@ -171,13 +171,17 @@ for (s in 1:length(sampleIDIndices)) {
     y <- colnames(sumTab)[1:i]
   } else {
     if (sampleIDIndices[s] < tail(sampleIDIndices, n = 1)) {
-      i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 1
+      i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq)
       y <- colnames(sumTab)[sampleIDIndices[s]:i]
+    } else {
+      y <- NA
     }
   }
-  print(kbl(select(sumTab, all_of(y)),
-            booktabs = T,
-            align = "l") %>%
-        kable_styling(latex_options = "striped"))
+  if (is.na(y) == FALSE) {
+    print(kbl(select(sumTab, all_of(y)),
+              booktabs = T,
+              align = "l") %>%
+          kable_styling(latex_options = "striped"))
+  }
 }
 ```
