--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -170,12 +170,19 @@ for (s in 1:length(sampleIDIndices)) {
     i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 2
     y <- colnames(sumTab)[1:i]
   } else {
-    i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq)
-    y <- colnames(sumTab)[sampleIDIndices[s]:i]
+    if (sampleIDIndices[s] < tail(sampleIDIndices, n = 1)) {
+      i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq)
+      y <- colnames(sumTab)[sampleIDIndices[s]:i]
+    } else {
+      i <- length(colnames(sumTab))
+      y <- colnames(sumTab)[sampleIDIndices[s]:i]
+    }
   }
-  print(kbl(select(sumTab, all_of(y)),
-            booktabs = T,
-            align = "l") %>%
-        kable_styling(latex_options = "striped"))
+  if (is.na(y) == FALSE) {
+    print(kbl(select(sumTab, all_of(y)),
+              booktabs = T,
+              align = "l") %>%
+          kable_styling(latex_options = "striped"))
+  }
 }
 ```
