--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -174,20 +174,23 @@ for (s in 1:length(sampleIDIndices)) {
   if (sampleIDIndices[s] == head(sampleIDIndices, n = 1)) {
     i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 2
     y <- colnames(sumTab)[1:i]
+    z <- 2
   } else {
     if (sampleIDIndices[s] < tail(sampleIDIndices, n = 1)) {
       i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq)
       y <- colnames(sumTab)[sampleIDIndices[s]:i]
+      z <- 1
     } else {
       i <- length(colnames(sumTab))
       y <- colnames(sumTab)[sampleIDIndices[s]:i]
+      z <- 1
     }
   }
     print(kbl(select(sumTab, all_of(y)),
               booktabs = T,
               align = "l") %>%
           kable_styling(latex_options = "striped") %>%
-          column_spec(1, width = "15em"))
+          column_spec(z, width = "15em"))
 }
 
 print(kbl(aaTab,
