--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -24,6 +24,8 @@ header-includes:
 - \cfoot{\textbf{Ver. No.}01}
 - \lfoot{\textbf{Doc. No.} EDLB.TE.C.032.F02}
 - \rfoot{\textbf{Effective Date:}TBD}
+classoption:
+  - landscape
 params:
   analysisDirFP: null
   runID: null
@@ -40,72 +42,23 @@ rmarkdown::render(input = "Cecret/bin/report/clia_summary.Rmd", output_file = "c
 ```{r setup1, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-library(formattable)
+#library(formattable)
 library(knitr)
 library(kableExtra)
 library(rmarkdown)
 ```
 
-```{r thresholds, include=FALSE}
-fastqcRawThreshold <- 100000          # min number of raw reads accepted in fastqc_raw column
-seqycleanKeptReviewThreshold <- 90    # min percent of reads remaining after seqyclean (pass/review)
-seqycleanKeptFailThreshold <- 70      # min percent of reads remaining after seqyclean (review/fail)
-depthAfterTrimThreshold <- 100        # min depth after trimming
-covAfterTrimThreshold <- 95           # min coverage after trimming
-perHumanThreshold <- NULL             # max percentage human reads allowed per sample (not in use)
-perSC2Threshold <- 65                 # min percentage SC2 reads allowed per sample
-perNThreshold <- 10                   # max percentage N allowed in genome
-```
-
-```{r format-fnc, include=FALSE}
-highGood <- function(v, t) {
-  # accepts value and threshhold and returns green if value >= threshhold and gray if not
-  return(ifelse(v >= t, "lightgreen", "lightgray"))
-}
-```
-
-
-```{r read-sum, include=FALSE}
+```{r read-tabs, include=FALSE}
 # Read summary.txt in
 sumTab <- read_tsv(file.path(params$analysisDirFP, "summary.txt"))
+```
 
-# This does all of the formatting for the table read in above and displayed in the next code chunk. It contains a mix of dplyr, formattable, and kableExtra commands.
-sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID), "")) %>% 
-          # remember to mod column names to match if columns included change
-          select(-aligner_version, -ivar_version, -fastp_reads_passed) %>%
+```{r format-tabs, include=FALSE}
+# Formatting summary.txt.
+sumTab <- select(sumTab, -aligner_version, -ivar_version, -fastp_reads_passed) %>%
           mutate(S_aa_INDELs = str_replace_all(S_aa_INDELs, c("," = ", ")))
-          # mutate(
-          #   pangolin_lineage = cell_spec(pangolin_lineage,
-          #                                color = ifelse(pangolin_lineage == "None", "red", "black"),
-          #                                bold = ifelse(pangolin_lineage == "None", T, F)),
-          #   pangolin_status = cell_spec(pangolin_status,
-          #                               color = ifelse(pangolin_status == "passed_qc", "black", "red"),
-          #                               bold = ifelse(pangolin_status == "passed_qc", F, T)),
-          #   fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1),
-          #   fastqc_raw_reads_2 = color_bar(color = highGood(fastqc_raw_reads_2, fastqcRawThreshold))(fastqc_raw_reads_2),
-          #   seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning,
-          #                               background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")),
-          #                               bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
-          #   depth_after_trimming = cell_spec(depth_after_trimming,
-          #                                    color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"),
-          #                                    bold = ifelse(depth_after_trimming >= depthAfterTrimThreshold, F, T)),
-          #   coverage_after_trimming = cell_spec(coverage_after_trimming,
-          #                                       color = ifelse(coverage_after_trimming >= covAfterTrimThreshold, "black", "red"),
-          #                                       bold = ifelse(coverage_after_trimming >= covAfterTrimThreshold, F, T)),
-          #   # `%_human_reads` = cell_spec(`%_human_reads`,
-          #   #                                     color = ifelse(`%_human_reads` < perHumanThreshold, "black", "red"),
-          #   #                                     bold = ifelse(`%_human_reads` < perHumanThreshold, F, T)),
-          #   `%_SARS-COV-2_reads` = cell_spec(`%_SARS-COV-2_reads`,
-          #                                       color = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, "black", "red"),
-          #                                       bold = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, F, T)),
-          #   `%_N` = cell_spec(`%_N`,
-          #                     color = ifelse(`%_N` >= perNThreshold, "red", "black"),
-          #                     bold = ifelse(`%_N` >= perNThreshold, T, F)),
-          #   vadr_status = cell_spec(vadr_status,
-          #                            color = ifelse(vadr_status == "PASS", "black", "red"),
-          #                            bold = ifelse(vadr_status == "PASS", F, T)))
 
-# Make column names nicer
+# Make summary.txt column names nicer
 colnames(sumTab) <- c("Sample.ID", 
                       "Sample.Name", 
                       "Pangolin", 
@@ -137,6 +90,10 @@ colnames(sumTab) <- c("Sample.ID",
                       "AA.Changes.S",
                       "Length.Longest.Insert", 
                       "Length.Longest.Del",
+                      "NewCol1",
+                      "NewCol2",
+                      "Percent.Mapped.Reads",
+                      "GenBank#",
                       "ORFs.Passing.QC",
                       "Coverage.S",
                       "Mean.Depth.S",
@@ -144,11 +101,41 @@ colnames(sumTab) <- c("Sample.ID",
                       "Percent.Ns.S"
 )
 
-# split out AA.Changes.S into it's own table
-aaTab <- select(sumTab, Sample.Name, AA.Changes.S)
-sumTab <- select(sumTab, -AA.Changes.S)
+# split out subtables for eLIMS and AA.Changes.S 
+aaTab <- select(sumTab, 
+                Sample.Name, 
+                `Spike Protein Substitutions` = AA.Changes.S) %>%
+         arrange(Sample.Name)
+elimsTab <- select(sumTab,
+                   Sample.Name,
+                   Lineage = Pangolin,
+                   Total.Reads = `#FastQC.R1`,
+                   Average.Depth = Depth.Post.Trim,
+                   Percent.Genome.Coverage = Coverage.Post.Trim,
+                   Mapped.Reads = Total.Reads.Analyzed,
+                   Open.Reading.Frames = ORFs.Passing.QC,
+                   S.gene.Coverage = Coverage.S,
+                   Percent.Mapped.Reads,
+                   Number.Lineage.Defined.Substitutions = NewCol1,
+                   pangoLEARN.version = NewCol2,
+                   `GenBank.Accession#` = `GenBank#`) %>%
+            arrange(Sample.Name)
+sumTab <- select(sumTab, 
+                 -AA.Changes.S,
+                 -Lineage = Pangolin,
+                 -`#FastQC.R1`,
+                 -Depth.Post.Trim,
+                 -Coverage.Post.Trim,
+                 -Total.Reads.Analyzed,
+                 -ORFs.Passing.QC,
+                 -Coverage.S,
+                 -Percent.Mapped.Reads,
+                 -NewCol1,
+                 -NewCol2,
+                 -`GenBank#`) %>%
+          arrange(Sample.Name)
 
-# Insert SampleID column into table at every nth column (params$sampleIDInsertFreq) position
+# Insert SampleID column into sumTab at every nth column (params$sampleIDInsertFreq) position
 # how many times to insert sampleID column
 colReps <- floor(ncol(sumTab) / params$sampleIDInsertFreq) 
 # create and bind columns to insert
@@ -167,9 +154,25 @@ for (i in 1:colReps) {
 }
 ```
 
-```{r display-sum, echo=FALSE, results='asis'}
-sampleIDIndices <- which(str_starts(colnames(sumTab), "Sample.Name"))
 
+```{r display-sum, echo=FALSE, results='asis'}
+print(kbl(elimsTab,
+          booktabs = T,
+          align = "l",
+          caption = "eLIMS Fields") %>%
+      kable_styling(latex_options = "striped") %>%
+      column_spec(1, width = "15em"))
+
+print(kbl(aaTab,
+          booktabs = T,
+          align = "l",
+          caption = "eLIMS Fields") %>%
+      kable_styling(latex_options = "striped") %>%
+      column_spec(1, width = "15em") %>%
+      column_spec(2, width = "30em")
+)
+
+sampleIDIndices <- which(str_starts(colnames(sumTab), "Sample.Name"))
 for (s in 1:length(sampleIDIndices)) {
   if (sampleIDIndices[s] == head(sampleIDIndices, n = 1)) {
     i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 2
@@ -192,12 +195,4 @@ for (s in 1:length(sampleIDIndices)) {
           kable_styling(latex_options = "striped") %>%
           column_spec(z, width = "15em"))
 }
-
-print(kbl(aaTab,
-          booktabs = T,
-          align = "l") %>%
-      kable_styling(latex_options = "striped") %>%
-      column_spec(1, width = "15em") %>%
-      column_spec(2, width = "30em")
-)
 ```
