Field name updates to clia_summary.Rmd. Not tested.

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -90,8 +90,8 @@ colnames(sumTab) <- c("Sample.ID",
                       "AA.Changes.S",
                       "Length.Longest.Insert", 
                       "Length.Longest.Del",
-                      "NewCol1",
-                      "NewCol2",
+                      "pangoLEARN.v",
+                      "#Lineage.Subs",
                       "Percent.Mapped.Reads",
                       "GenBank#",
                       "ORFs.Passing.QC",
@@ -116,8 +116,8 @@ elimsTab <- select(sumTab,
                    Open.Reading.Frames = ORFs.Passing.QC,
                    S.gene.Coverage = Coverage.S,
                    Percent.Mapped.Reads,
-                   Number.Lineage.Defined.Substitutions = NewCol1,
-                   pangoLEARN.version = NewCol2,
+                   Number.Lineage.Defined.Substitutions = `#Lineage.Subs`,
+                   pangoLEARN.version = pangoLearn.v,
                    `GenBank.Accession#` = `GenBank#`) %>%
             arrange(Sample.Name)
 sumTab <- select(sumTab, 
@@ -130,8 +130,8 @@ sumTab <- select(sumTab,
                  -ORFs.Passing.QC,
                  -Coverage.S,
                  -Percent.Mapped.Reads,
-                 -NewCol1,
-                 -NewCol2,
+                 -`#Lineage.Subs`,
+                 -pangoLearn.v,
                  -`GenBank#`) %>%
           arrange(Sample.Name)
 
