--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -160,14 +160,14 @@ print(kbl(elimsTab,
           booktabs = T,
           align = "l",
           caption = "eLIMS Fields") %>%
-      kable_styling(latex_options = "striped") %>%
+      kable_styling(latex_options = c("striped", "repeat_header")) %>%
       column_spec(1, width = "15em"))
 
 print(kbl(aaTab,
           booktabs = T,
           align = "l",
           caption = "eLIMS Fields") %>%
-      kable_styling(latex_options = "striped") %>%
+      kable_styling(latex_options = c("striped", "repeat_header")) %>%
       column_spec(1, width = "15em") %>%
       column_spec(2, width = "30em")
 )
@@ -191,8 +191,9 @@ for (s in 1:length(sampleIDIndices)) {
   }
     print(kbl(select(sumTab, all_of(y)),
               booktabs = T,
-              align = "l") %>%
-          kable_styling(latex_options = "striped") %>%
+              align = "l",
+              caption = "Other Fields") %>%
+          kable_styling(latex_options = c("striped", "repeat_header")) %>%
           column_spec(z, width = "15em"))
 }
 ```
