--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -30,7 +30,7 @@ params:
   analysisDirFP: null
   runID: null
   seqDirFP: null
-  sampleIDInsertFreq: 4
+  sampleIDInsertFreq: 6
 
 ---
 
@@ -158,42 +158,45 @@ for (i in 1:colReps) {
 ```{r display-sum, echo=FALSE, results='asis'}
 print(kbl(elimsTab,
           booktabs = T,
-          align = "l",
-          caption = "eLIMS Fields") %>%
+          align = "l") %>%
       kable_styling(latex_options = c("striped", "repeat_header")) %>%
       column_spec(1, width = "15em"))
 
+myTableSplittr <- function(t) {
+  # Where t is a table that is too wide for one page and needs to be split up
+  sampleIDIndices <- which(str_starts(colnames(t), "Sample.Name"))
+  for (s in 1:length(sampleIDIndices)) {
+    if (sampleIDIndices[s] == head(sampleIDIndices, n = 1)) {
+      i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 2
+      y <- colnames(t)[1:i]
+      z <- 2
+    } else {
+      if (sampleIDIndices[s] < tail(sampleIDIndices, n = 1)) {
+        i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq)
+        y <- colnames(t)[sampleIDIndices[s]:i]
+        z <- 1
+      } else {
+        i <- length(colnames(t))
+        y <- colnames(t)[sampleIDIndices[s]:i]
+        z <- 1
+      }
+    }
+      print(kbl(select(t, all_of(y)),
+                booktabs = T,
+                align = "l") %>%
+            kable_styling(latex_options = c("striped", "repeat_header")) %>%
+            column_spec(z, width = "15em"))
+  }
+  return()
+}
+
+
 print(kbl(aaTab,
           booktabs = T,
-          align = "l",
-          caption = "eLIMS Fields") %>%
+          align = "l") %>%
       kable_styling(latex_options = c("striped", "repeat_header")) %>%
       column_spec(1, width = "15em") %>%
-      column_spec(2, width = "30em")
-)
+      column_spec(2, width = "45em"))
 
-sampleIDIndices <- which(str_starts(colnames(sumTab), "Sample.Name"))
-for (s in 1:length(sampleIDIndices)) {
-  if (sampleIDIndices[s] == head(sampleIDIndices, n = 1)) {
-    i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq) - 2
-    y <- colnames(sumTab)[1:i]
-    z <- 2
-  } else {
-    if (sampleIDIndices[s] < tail(sampleIDIndices, n = 1)) {
-      i <- sampleIDIndices[s] + as.numeric(params$sampleIDInsertFreq)
-      y <- colnames(sumTab)[sampleIDIndices[s]:i]
-      z <- 1
-    } else {
-      i <- length(colnames(sumTab))
-      y <- colnames(sumTab)[sampleIDIndices[s]:i]
-      z <- 1
-    }
-  }
-    print(kbl(select(sumTab, all_of(y)),
-              booktabs = T,
-              align = "l",
-              caption = "Other Fields") %>%
-          kable_styling(latex_options = c("striped", "repeat_header")) %>%
-          column_spec(z, width = "15em"))
-}
+myTableSplittr(sumTab)
 ```
