--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -137,31 +137,42 @@ sumTab <- select(sumTab,
 
 # Insert SampleID column into sumTab at every nth column (params$sampleIDInsertFreq) position
 # how many times to insert sampleID column
-colReps <- floor(ncol(sumTab) / params$sampleIDInsertFreq) 
+colRepsSumTab <- floor(ncol(sumTab) / params$sampleIDInsertFreq) 
+colRepsElimsTab <- floor(ncol(elimsTab) / params$sampleIDInsertFreq) 
 # create and bind columns to insert
-sumTab <- bind_cols(sumTab, as_tibble(replicate(colReps, sumTab$Sample.Name))) 
+sumTab <- bind_cols(sumTab, as_tibble(replicate(colRepsSumTab, sumTab$Sample.Name))) 
 sumTabColNames <- colnames(sumTab)
+elimsTab <- bind_cols(elimsTab, as_tibble(replicate(colRepsElimsTab, elimsTab$Sample.Name))) 
+elimsTabColNames <- colnames(elimsTab)
+
 # function to rename columns slightly more nicely. Note R won't allow redundant column names.
 colNamer <- function(c) {
   return(paste0("Sample.Name", str_replace(c, "V", "")))
 }
 # move new sampleID columns to right place
-for (i in 1:colReps) {
+for (i in 1:colRepsSumTab) {
   sumTab <- relocate(sumTab, 
                      eval(paste0("V", i)), 
                      .after = sumTabColNames[i*params$sampleIDInsertFreq]) %>%
             rename_with(colNamer, starts_with(paste0("V", i)))
 }
+for (i in 1:colRepsElimsTab) {
+  elimsTab <- relocate(elimsTab, 
+                     eval(paste0("V", i)), 
+                     .after = elimsTabColNames[i*params$sampleIDInsertFreq]) %>%
+            rename_with(colNamer, starts_with(paste0("V", i)))
+}
+
 ```
 
 
 ```{r display-sum, echo=FALSE, results='asis'}
-print(kbl(elimsTab,
-          booktabs = T,
-          longtable = T,
-          align = "l") %>%
-      kable_styling(latex_options = c("striped", "repeat_header")) %>%
-      column_spec(1, width = "15em"))
+# print(kbl(elimsTab,
+#           booktabs = T,
+#           longtable = T,
+#           align = "l") %>%
+#       kable_styling(latex_options = c("striped", "repeat_header")) %>%
+#       column_spec(1, width = "15em"))
 
 myTableSplittr <- function(t) {
   # Where t is a table that is too wide for one page and needs to be split up
@@ -184,12 +195,15 @@ myTableSplittr <- function(t) {
     }
       print(kbl(select(t, all_of(y)),
                 booktabs = T,
+                longtable = T,
                 align = "l") %>%
             kable_styling(latex_options = c("striped", "repeat_header")) %>%
             column_spec(z, width = "15em"))
   }
   return()
 }
+
+myTableSplittr(elimsTab)
 
 print(kbl(aaTab,
           booktabs = T,
