Fixing typo on new code chunk

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -214,6 +214,6 @@ cat('\\pagebreak')
 
 #### Other Dry Lab Fields
 
-```{r display-tabs, echo=FALSE, results='asis'}
+```{r display-sumTab, echo=FALSE, results='asis'}
 myTableSplittr(sumTab)
 ```
