Trying to fix centering with latex

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -48,12 +48,6 @@ library(kableExtra)
 library(rmarkdown)
 ```
 
-```{css, echo=FALSE}
-h1, h2, h3 {
-  text-align: center;
-}
-```
-
 ```{r read-tabs, include=FALSE}
 # Read summary.txt in
 sumTab <- read_tsv(file.path(params$analysisDirFP, "summary.txt"))
@@ -172,7 +166,9 @@ for (i in 1:colRepsElimsTab) {
 
 ```
 
-### eLIMS Fields
+\begin{center}
+\textbf{\huge{eLIMS Fields}}
+\end{center}
 
 ```{r display-tabs, echo=FALSE, results='asis'}
 
@@ -218,7 +214,9 @@ print(kbl(aaTab,
 cat('\\pagebreak')
 ```
 
-### Other Dry Lab Fields
+\begin{center}
+\textbf{\huge{Other Dry Lab Fields}}
+\end{center}
 
 ```{r display-sumTab, echo=FALSE, results='asis'}
 myTableSplittr(sumTab)
