--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -135,6 +135,17 @@ sumTab <- select(sumTab,
                  -`GenBank#`) %>%
           arrange(Sample.Name)
 
+# Round off some numbers to make them prettier
+elimsTab <- mutate(elimsTab,
+                   Average.Depth = round(Average.Depth),
+                   Percent.Genome.Coverage = round(Percent.Genome.Coverage, n = 1))
+sumTab <- mutate(sumTab,
+                 `%Seqclean.Pairs` = round(`%Seqclean.Pairs`, n = 1),
+                 `%SC2.Reads` = round(`%SC2.Reads`, n = 1),
+                 `%N` = round(`%N`, n = 1),
+                 Mean.Depth.Coverage = round(Mean.Depth.Coverage, n = 1),
+                 `%Reads.Mapping.SC2` = round(`%Reads.Mapping.SC2`, n = 1))
+
 # Insert SampleID column into sumTab at every nth column (params$sampleIDInsertFreq) position
 # how many times to insert sampleID column
 colRepsSumTab <- floor(ncol(sumTab) / params$sampleIDInsertFreq) 
