Rounding values in clia report - fix conflict with dplyr by using the correct args for round

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -42,7 +42,6 @@ rmarkdown::render(input = "Cecret/bin/report/clia_summary.Rmd", output_file = "c
 ```{r setup1, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-#library(formattable)
 library(knitr)
 library(kableExtra)
 library(rmarkdown)
@@ -137,14 +136,14 @@ sumTab <- select(sumTab,
 
 # Round off some numbers to make them prettier
 elimsTab <- mutate(elimsTab,
-                   Average.Depth = base::round(Average.Depth),
-                   Percent.Genome.Coverage = base::round(Percent.Genome.Coverage, n = 1))
+                   Average.Depth = round(Average.Depth),
+                   Percent.Genome.Coverage = round(Percent.Genome.Coverage, digits = 1))
 sumTab <- mutate(sumTab,
-                 `%Seqclean.Pairs` = base::round(`%Seqclean.Pairs`, n = 1),
-                 `%SC2.Reads` = base::round(`%SC2.Reads`, n = 1),
-                 `%N` = base::round(`%N`, n = 1),
-                 Mean.Depth.Coverage = base::round(Mean.Depth.Coverage, n = 1),
-                 `%Reads.Mapping.SC2` = base::round(`%Reads.Mapping.SC2`, n = 1))
+                 `%Seqclean.Pairs` = round(`%Seqclean.Pairs`, digits = 1),
+                 `%SC2.Reads` = round(`%SC2.Reads`, digits = 1),
+                 `%N` = round(`%N`, digits = 1),
+                 Mean.Depth.Coverage = round(Mean.Depth.Coverage, digits = 1),
+                 `%Reads.Mapping.SC2` = round(`%Reads.Mapping.SC2`, digits = 1))
 
 # Insert SampleID column into sumTab at every nth column (params$sampleIDInsertFreq) position
 # how many times to insert sampleID column
