Another clia report column name typo

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -139,7 +139,7 @@ elimsTab <- mutate(elimsTab,
                    Average.Depth = round(Average.Depth),
                    Percent.Genome.Coverage = round(Percent.Genome.Coverage, digits = 1))
 sumTab <- mutate(sumTab,
-                 `%Seqyclean.Pairs` = round(`%Seqclean.Pairs`, digits = 1),
+                 `%Seqyclean.Pairs` = round(`%Seqyclean.Pairs`, digits = 1),
                  `%SC2.Reads` = round(`%SC2.Reads`, digits = 1),
                  `%N` = round(`%N`, digits = 1),
                  Mean.Depth.Coverage = round(Mean.Depth.Coverage, digits = 1),
