--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -31,12 +31,16 @@ params:
   runID: null
   seqDirFP: null
   sampleIDInsertFreq: 5
+  runNormal: TRUE
 
 ---
 
 ```{r index-comments, include=FALSE, eval=FALSE}
 # For rapid testing:
 rmarkdown::render(input = "Cecret/bin/report/clia_summary.Rmd", output_file = "clia_summary.pdf", output_format = "pdf_document", params = list(analysisDirFP = "../../../../testing", runID = "M3235-21-015", seqDirFP = "../../../../testing"))
+
+# To generate an empty form for CLIA form sign off (rarely used)
+rmarkdown::render(input = "Cecret/bin/report/clia_summary.Rmd", output_file = "clia_summary.pdf", output_format = "pdf_document", params = list(analysisDirFP = "../../../../testing", runID = "M3235-21-015", seqDirFP = "../../../../testing", runNormal = FALSE))
 ```
 
 ```{r setup1, include=FALSE}
@@ -47,12 +51,12 @@ library(kableExtra)
 library(rmarkdown)
 ```
 
-```{r read-tabs, include=FALSE}
+```{r read-tabs, include=FALSE, eval=params$runNormal}
 # Read summary.txt in
 sumTab <- read_tsv(file.path(params$analysisDirFP, "summary.txt"))
 ```
 
-```{r format-tabs, include=FALSE}
+```{r format-sumTab, include=FALSE, eval=params$runNormal}
 # Formatting summary.txt.
 sumTab <- select(sumTab, -aligner_version, -ivar_version, -fastp_reads_passed) %>%
           mutate(S_aa_INDELs = str_replace_all(S_aa_INDELs, c("," = ", ")))
@@ -98,7 +102,54 @@ colnames(sumTab) <- c("Sample.ID",
                       "Percent.Pos.Min.Cov.S",
                       "Percent.Ns.S"
 )
+```
 
+```{r format-sumTab-empty, include=FALSE, eval=ifelse(params$runNormal == FALSE, TRUE, FALSE)}
+#Make empty sumTab
+sumTab <- tibble("Sample.ID" = character(), 
+                      "Sample.Name" = character(), 
+                      "Pangolin" = character(), 
+                      "Pangolin.QC" = character(), 
+                      "NextClade" = character(), 
+                      "#FastQC.R1" = character(), 
+                      "#FastQC.R2" = character(), 
+                      "#Seqyclean.Pairs" = character(), 
+                      "%Seqyclean.Pairs" = character(), 
+                      "Depth.Post.Trim" = character(), 
+                      "Coverage.Post.Trim" = character(), 
+                      "%Human.Reads" = character(), 
+                      "%SC2.Reads" = character(), 
+                      "#iVar.Variants" = character(), 
+                      "#BCFTools.Variants" = character(), 
+                      "#BEDTools.Failed.Amps" = character(), 
+                      "#SAMTools.Failed.Amps" = character(), 
+                      "#N" = character(), 
+                      "#Degenerate" = character(), 
+                      "#ACTG" = character(), 
+                      "#Total.Bases" = character(), 
+                      "Total.Reads.Analyzed" = character(), 
+                      "%N" = character(), 
+                      "Mean.Cov.Depth" = character(), 
+                      "Percent.Mapped.Reads" = character(), 
+                      "Vadr" = character(), 
+                      "Vadr.All.ORF.Shift" = character(),
+                      "Vadr.S.ORF.Shift" = character(), 
+                      "AA.Changes.S" = character(),
+                      "Length.Longest.Insert" = character(), 
+                      "Length.Longest.Del" = character(),
+                      "pangoLEARN.v" = character(),
+                      "#Lineage.Subs" = character(),
+                      "GenBank#" = character(),
+                      "ORFs.Passing.QC" = character(),
+                      "Coverage.S" = character(),
+                      "Mean.Depth.S" = character(),
+                      "Percent.Pos.Min.Cov.S" = character(),
+                      "Percent.Ns.S" = character()
+)
+```
+
+
+```{r format-tabs, include=FALSE}
 # split out subtables for eLIMS and AA.Changes.S 
 aaTab <- select(sumTab, 
                 Sample.Name, 
