Corrected column name error in clia_summary.Rmd

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -86,7 +86,7 @@ colnames(sumTab) <- c("Sample.ID",
                       "Total.Reads.Analyzed", 
                       "%N", 
                       "Mean.Cov.Depth", 
-                      "Percent.Mapped.Reads", 
+                      "%Reads.Mapping.SC2", 
                       "Vadr", 
                       "Vadr.All.ORF.Shift",
                       "Vadr.S.ORF.Shift", 
@@ -130,7 +130,7 @@ sumTab <- tibble("Sample.ID" = character(),
                       "Total.Reads.Analyzed" = character(), 
                       "%N" = character(), 
                       "Mean.Cov.Depth" = character(), 
-                      "Percent.Mapped.Reads" = character(), 
+                      "%Reads.Mapping.SC2" = character(), 
                       "Vadr" = character(), 
                       "Vadr.All.ORF.Shift" = character(),
                       "Vadr.S.ORF.Shift" = character(), 
